--- a/frontend/src/compoenents/searchCard/searchCard.css
+++ b/frontend/src/compoenents/searchCard/searchCard.css
@@ -12,32 +12,27 @@
   margin: 10px;
 }
 
-.searchBar {
-  box-shadow: 0 3px 5px rgba(179, 179, 179, 0.24);
+.search .searchBar {
+  display: flex;
 }
 
-.searchBar .MuiInputBase-input {
-  height: 2.5vh !important;
-  font-size: 3vh !important;
+.search .button {
+
+  padding: 1vh !important;
 }
 
-/* .item {
-  height: 1vh !important;
-  margin-top: 1.5vh;
+.search .inputBase {
+  width: 85%;
+  font-size: 1.2vw;
 }
 
-.item .MuiRouchRipple-root {
-  height: 1vh !important;
-} */
+.search .googleIcon {
+  width: 1.4vw;
+}
 
-/* .itemButton {
-  min-height: 0.5vh !important;
-  height: 1vh;
-} */
-
-/* .item .MuiListItemButton-root {
-  min-height: 0.5vh !important;
-} */
+.search .searchIcon {
+  width: 1.4vw;
+}
 
 .itemText .MuiTypography-root {
   font-size: 1.6vh !important;
